tests/ui/half-open-range-patterns/range_pat_interactions3.stderr
error[E0658]: inline-const in pattern position is experimental
  --> $DIR/range_pat_interactions3.rs:12:20
   |
LL |             y @ 0..const { 5 + 1 } => assert_eq!(y, 5),
   |                    ^^^^^
   |
   = note: see issue #76001 <https://github.com/rust-lang/rust/issues/76001> for more information
   = help: add `#![feature(inline_const_pat)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
